<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.activities.friendadd.FriendAddActivity">

    <include layout="@layout/reuse_toolbar"/>

    <ImageView
        android:id="@+id/fa_avatar_iv"
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:layout_below="@+id/toolbar"
        android:src="@drawable/ic_place_holder"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/bigMargin"/>

    <EditText
        android:id="@+id/fa_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:layout_constraintTop_toBottomOf="@+id/fa_avatar_iv"
        android:maxLines="1"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:layout_margin="@dimen/bigMargin"/>

    <EditText
        android:id="@+id/fa_phone_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        app:layout_constraintTop_toBottomOf="@+id/fa_name_et"
        android:maxLines="1"
        android:inputType="phone"
        android:imeOptions="actionDone"
        android:layout_margin="@dimen/bigMargin"/>

    <EditText
        android:id="@+id/fa_email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:layout_constraintTop_toBottomOf="@+id/fa_phone_et"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:imeOptions="actionDone"
        android:layout_margin="@dimen/bigMargin"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fa_country_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/fa_email_et"
        android:layout_marginTop="@dimen/maxBigMargin"
        android:layout_marginStart="@dimen/bigMargin"
        android:layout_marginEnd="@dimen/bigMargin"
        android:layout_marginBottom="@dimen/bigMargin">
        <TextView
            android:id="@+id/fa_country_tv"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/titleHeight"
            android:text="@string/country"
            android:textSize="@dimen/textCenter"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            android:layout_alignParentStart="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlCompat" />
        <ImageView
            android:id="@+id/fa_country_iv"
            android:layout_width="@dimen/bigSquareIconHeight"
            android:layout_height="@dimen/bigSquareIconHeight"
            android:src="@drawable/ic_flag"
            android:layout_marginStart="@dimen/bigMargin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fa_country_tv"
            tools:ignore="RtlCompat" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fa_tag_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/fa_country_layout"
        android:layout_marginStart="@dimen/bigMargin"
        android:layout_marginEnd="@dimen/bigMargin">
        <TextView
            android:id="@+id/fa_tag_tv"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/chipHeight"
            android:text="@string/tag"
            android:textSize="@dimen/textCenter"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="RtlCompat"/>
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/fa_tag_cg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fa_tag_tv"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/bigMargin"
            android:theme="@style/Theme.MaterialComponents.Light"
            tools:ignore="RtlCompat">
            <ImageView
                android:id="@+id/fa_tag_add_iv"
                android:layout_width="@dimen/bigSquareIconHeight"
                android:layout_height="@dimen/chipHeight"
                android:src="@drawable/ic_add"/>
        </com.google.android.material.chip.ChipGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
    
</androidx.constraintlayout.widget.ConstraintLayout>