<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_fa_ok"
        android:icon="@drawable/ic_check"
        app:showAsAction="ifRoom"
        android:title="@string/menu_fa_ok" />
</menu>